Modularized project and transitioned to jetbrains annotations

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/vim,java,emacs,maven,intellij+all
 # Edit at https://www.gitignore.io/?templates=vim,java,emacs,maven,intellij+all
 
@@ -79,6 +78,8 @@ flycheck_*.el
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+build/
+.gradle/
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
